[package]
name = "mirror-docker"
version = "0.1.0"
edition = "2024"
authors = ["AdySec <admin@adysec.com>"]
description = "A Docker registry proxy for multiple registries"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2"
serde_json = "1.0"
